Cleanup and multiple links

--- a/src/NzbDrone.Core/Localization/Core/en.json
+++ b/src/NzbDrone.Core/Localization/Core/en.json
@@ -1429,12 +1429,12 @@
   "NotificationsTelegramSettingsChatIdHelpText": "You must start a conversation with the bot or add it to your group to receive messages",
   "NotificationsTelegramSettingsIncludeAppName": "Include {appName} in Title",
   "NotificationsTelegramSettingsIncludeAppNameHelpText": "Optionally prefix message title with {appName} to differentiate notifications from different applications",
+  "NotificationsTelegramSettingsMetadataLinks": "Metadata Links",
+  "NotificationsTelegramSettingsMetadataLinksHelpText": "Add a links to series metadata when sending notifications",
   "NotificationsTelegramSettingsSendSilently": "Send Silently",
   "NotificationsTelegramSettingsSendSilentlyHelpText": "Sends the message silently. Users will receive a notification with no sound",
   "NotificationsTelegramSettingsTopicId": "Topic ID",
   "NotificationsTelegramSettingsTopicIdHelpText": "Specify a Topic ID to send notifications to that topic. Leave blank to use the general topic (Supergroups only)",
-  "NotificationsTelegramSettingsSendMetadataLink": "Add a link to the series metadata",
-  "NotificationsTelegramSettingsSendMetadataLinkHelpText": "Add a link to the series metadata when sending the notifications",
   "NotificationsTraktSettingsAccessToken": "Access Token",
   "NotificationsTraktSettingsAuthUser": "Auth User",
   "NotificationsTraktSettingsAuthenticateWithTrakt": "Authenticate with Trakt",
