--- a/src/NzbDrone.Core/Localization/Core/en.json
+++ b/src/NzbDrone.Core/Localization/Core/en.json
@@ -1773,6 +1773,10 @@
   "SeasonPremiere": "Season Premiere",
   "SeasonPremieresOnly": "Season Premieres Only",
   "Seasons": "Seasons",
+  "SeasonsMonitoredAll": "All",
+  "SeasonsMonitoredPartial": "Partial",
+  "SeasonsMonitoredNone": "None",
+  "SeasonsMonitoredStatus": "Seasons Monitored",
   "SecretToken": "Secret Token",
   "Security": "Security",
   "Seeders": "Seeders",
