--- a/src/NzbDrone.Core/Localization/Core/en.json
+++ b/src/NzbDrone.Core/Localization/Core/en.json
@@ -284,6 +284,7 @@
   "CustomFormatsSettingsSummary": "Custom Formats and Settings",
   "CustomFormatsSettingsTriggerInfo": "A Custom Format will be applied to a release or file when it matches at least one of each of the different condition types chosen.",
   "CustomFormatsSpecificationFlag": "Flag",
+  "CustomFormatsSpecificationIndexer": "Indexer",
   "CustomFormatsSpecificationLanguage": "Language",
   "CustomFormatsSpecificationMaximumSize": "Maximum Size",
   "CustomFormatsSpecificationMaximumSizeHelpText": "Release must be less than or equal to this size",
