Add Last Search Time to /episode API and frontend

--- a/src/NzbDrone.Core/Localization/Core/en.json
+++ b/src/NzbDrone.Core/Localization/Core/en.json
@@ -1063,6 +1063,7 @@
   "Large": "Large",
   "LastDuration": "Last Duration",
   "LastExecution": "Last Execution",
+  "LastSearched": "Last Searched",
   "LastUsed": "Last Used",
   "LastWriteTime": "Last Write Time",
   "LatestSeason": "Latest Season",
