Add keep option to "remove", which may make sense in combination with "Blocklist"

--- a/src/NzbDrone.Core/Localization/Core/en.json
+++ b/src/NzbDrone.Core/Localization/Core/en.json
@@ -1049,6 +1049,9 @@
   "InvalidUILanguage": "Your UI is set to an invalid language, correct it and save your settings",
   "KeepAndTagSeries": "Keep and Tag Series",
   "KeepAndUnmonitorSeries": "Keep and Unmonitor Series",
+  "KeepInQueue": "Keep in Queue",
+  "KeepInQueueHint": "Keeps Download in Queue (but can blocklist)",
+  "KeepInQueueMultipleHint": "Keeps Downloads in Queue (but can blocklist)",  
   "KeyboardShortcuts": "Keyboard Shortcuts",
   "KeyboardShortcutsCloseModal": "Close Current Modal",
   "KeyboardShortcutsConfirmModal": "Accept Confirmation Modal",
