Incorperated roles for different users

--- a/src/NzbDrone.Core/Localization/Core/en.json
+++ b/src/NzbDrone.Core/Localization/Core/en.json
@@ -53,10 +53,12 @@
   "AddRootFolderError": "Unable to add root folder",
   "AddSeriesWithTitle": "Add {title}",
   "AddToDownloadQueue": "Add to download queue",
+  "AddUser": "Add User",
   "Added": "Added",
   "AddedDate": "Added: {date}",
   "AddedToDownloadQueue": "Added to download queue",
   "AddingTag": "Adding tag",
+  "Admin": "Admin",
   "AfterManualRefresh": "After Manual Refresh",
   "Age": "Age",
   "AgeWhenGrabbed": "Age (when grabbed)",
@@ -387,6 +389,8 @@
   "DeleteSpecificationHelpText": "Are you sure you want to delete specification '{name}'?",
   "DeleteTag": "Delete Tag",
   "DeleteTagMessageText": "Are you sure you want to delete the tag '{label}'?",
+  "DeleteUser": "Delete User",
+  "DeleteUserHelperText": "Are you you want to delete the user '{username}'?",
   "Deleted": "Deleted",
   "DeletedReasonEpisodeMissingFromDisk": "{appName} was unable to find the file on disk so the file was unlinked from the episode in the database",
   "DeletedReasonManual": "File was deleted using {appName}, either manually or by another tool through the API",
@@ -596,6 +600,7 @@
   "EditSelectedSeries": "Edit Selected Series",
   "EditSeries": "Edit Series",
   "EditSeriesModalHeader": "Edit - {title}",
+  "EditUser": "Edit User",
   "Enable": "Enable",
   "EnableAutomaticAdd": "Enable Automatic Add",
   "EnableAutomaticAddSeriesHelpText": "Add series from this list to {appName} when syncs are performed via the UI or by {appName}",
@@ -1598,6 +1603,7 @@
   "Range": "Range",
   "Rating": "Rating",
   "RatingVotes": "Rating Votes",
+  "ReadOnly": "Read Only",
   "ReadTheWikiForMoreInformation": "Read the Wiki for more information",
   "Real": "Real",
   "Reason": "Reason",
@@ -2079,6 +2085,8 @@
   "UsenetDelayTime": "Usenet Delay: {usenetDelay}",
   "UsenetDisabled": "Usenet Disabled",
   "Username": "Username",
+  "Users": "Users",
+  "UsersSettingsSummary": "Manage users and their access to {appName}",
   "UtcAirDate": "UTC Air Date",
   "Version": "Version",
   "VersionNumber": "Version {version}",
