--- a/src/NzbDrone.Core/Localization/Core/en.json
+++ b/src/NzbDrone.Core/Localization/Core/en.json
@@ -1179,6 +1179,8 @@
   "MinimumFreeSpace": "Minimum Free Space",
   "MinimumFreeSpaceHelpText": "Prevent import if it would leave less than this amount of disk space available",
   "MinimumLimits": "Minimum Limits",
+  "MinimumUpgradeCustomFormatScore": "Minimum Upgrade Custom Format Score",
+  "MinimumUpgradeCustomFormatScoreHelpText": "Minimum custom format score needed to upgrade",
   "MinutesFortyFive": "45 Minutes: {fortyFive}",
   "MinutesSixty": "60 Minutes: {sixty}",
   "MinutesThirty": "30 Minutes: {thirty}",
