--- a/src/NzbDrone.Core/Localization/Core/en.json
+++ b/src/NzbDrone.Core/Localization/Core/en.json
@@ -1176,11 +1176,11 @@
   "MinimumAgeHelpText": "Usenet only: Minimum age in minutes of NZBs before they are grabbed. Use this to give new releases time to propagate to your usenet provider.",
   "MinimumCustomFormatScore": "Minimum Custom Format Score",
   "MinimumCustomFormatScoreHelpText": "Minimum custom format score allowed to download",
+  "MinimumCustomFormatScoreIncrease": "Minimum Custom Format Score Increase",
+  "MinimumCustomFormatScoreIncreaseHelpText": "Minimum custom format score needed to upgrade",
   "MinimumFreeSpace": "Minimum Free Space",
   "MinimumFreeSpaceHelpText": "Prevent import if it would leave less than this amount of disk space available",
   "MinimumLimits": "Minimum Limits",
-  "MinimumUpgradeCustomFormatScore": "Minimum Upgrade Custom Format Score",
-  "MinimumUpgradeCustomFormatScoreHelpText": "Minimum custom format score needed to upgrade",
   "MinutesFortyFive": "45 Minutes: {fortyFive}",
   "MinutesSixty": "60 Minutes: {sixty}",
   "MinutesThirty": "30 Minutes: {thirty}",
