--- a/src/NzbDrone.Core/Localization/Core/en.json
+++ b/src/NzbDrone.Core/Localization/Core/en.json
@@ -705,6 +705,7 @@
   "FileManagement": "File Management",
   "FileNameTokens": "File Name Tokens",
   "FileNames": "File Names",
+  "FileSize": "File Size",
   "Filename": "Filename",
   "Files": "Files",
   "Filter": "Filter",
@@ -1666,8 +1667,8 @@
   "ReleaseProfileTagSeriesHelpText": "Release profiles will apply to series with at least one matching tag. Leave blank to apply to all series",
   "ReleaseProfiles": "Release Profiles",
   "ReleaseProfilesLoadError": "Unable to load Release Profiles",
-  "ReleaseRejected": "Release Rejected",
   "ReleasePush": "Release Push",
+  "ReleaseRejected": "Release Rejected",
   "ReleaseSceneIndicatorAssumingScene": "Assuming Scene numbering.",
   "ReleaseSceneIndicatorAssumingTvdb": "Assuming TVDB numbering.",
   "ReleaseSceneIndicatorMappedNotRequested": "Mapped episode wasn't requested in this search.",
@@ -2119,8 +2120,8 @@
   "UsenetDelayHelpText": "Delay in minutes to wait before grabbing a release from Usenet",
   "UsenetDelayTime": "Usenet Delay: {usenetDelay}",
   "UsenetDisabled": "Usenet Disabled",
-  "Username": "Username",
   "UserInvokedSearch": "User Invoked Search",
+  "Username": "Username",
   "UtcAirDate": "UTC Air Date",
   "Version": "Version",
   "VersionNumber": "Version {version}",
