Fix indexer translations for categories and additional parameters

--- a/src/NzbDrone.Core/Localization/Core/en.json
+++ b/src/NzbDrone.Core/Localization/Core/en.json
@@ -976,6 +976,7 @@
   "IndexerJackettAllHealthCheckMessage": "Indexers using the unsupported Jackett 'all' endpoint: {indexerNames}",
   "IndexerLongTermStatusAllUnavailableHealthCheckMessage": "All indexers are unavailable due to failures for more than 6 hours",
   "IndexerLongTermStatusUnavailableHealthCheckMessage": "Indexers unavailable due to failures for more than 6 hours: {indexerNames}",
+  "IndexerNyaaSettingsAdditionalParametersHelpText": "Please note if you change the category you will have to add required/restricted rules about the subgroups to avoid foreign language releases.",
   "IndexerOptionsLoadError": "Unable to load indexer options",
   "IndexerPriority": "Indexer Priority",
   "IndexerPriorityHelpText": "Indexer Priority from 1 (Highest) to 50 (Lowest). Default: 25. Used when grabbing releases as a tiebreaker for otherwise equal releases, {appName} will still use all enabled indexers for RSS Sync and Searching",
@@ -985,9 +986,8 @@
   "IndexerSearchNoAvailableIndexersHealthCheckMessage": "All search-capable indexers are temporarily unavailable due to recent indexer errors",
   "IndexerSearchNoInteractiveHealthCheckMessage": "No indexers available with Interactive Search enabled, {appName} will not provide any interactive search results",
   "IndexerSettings": "Indexer Settings",
-  "IndexerSettingsAdditionalNewznabParametersHelpText": "Please note if you change the category you will have to add required/restricted rules about the subgroups to avoid foreign language releases.",
   "IndexerSettingsAdditionalParameters": "Additional Parameters",
-  "IndexerSettingsAdditionalParametersNyaa": "Additional Parameters",
+  "IndexerSettingsAdditionalParametersHelpText": "Additional parameters",
   "IndexerSettingsAllowZeroSize": "Allow Zero Size",
   "IndexerSettingsAllowZeroSizeHelpText": "Enabling this will allow you to use feeds that don't specify release size, but be careful, size related checks will not be performed.",
   "IndexerSettingsAnimeCategories": "Anime Categories",
@@ -999,7 +999,6 @@
   "IndexerSettingsApiUrl": "API URL",
   "IndexerSettingsApiUrlHelpText": "Do not change this unless you know what you're doing. Since your API key will be sent to that host.",
   "IndexerSettingsCategories": "Categories",
-  "IndexerSettingsCategoriesHelpText": "Drop down list, leave blank to disable standard/daily shows",
   "IndexerSettingsCookie": "Cookie",
   "IndexerSettingsCookieHelpText": "If your site requires a login cookie to access the rss, you'll have to retrieve it via a browser.",
   "IndexerSettingsFailDownloads": "Fail Downloads",
@@ -1019,6 +1018,7 @@
   "IndexerSettingsSeedRatioHelpText": "The ratio a torrent should reach before stopping, empty uses the download client's default. Ratio should be at least 1.0 and follow the indexers rules",
   "IndexerSettingsSeedTime": "Seed Time",
   "IndexerSettingsSeedTimeHelpText": "The time a torrent should be seeded before stopping, empty uses the download client's default",
+  "IndexerSettingsStandardDailyCategoriesHelpText": "Drop down list, leave blank to disable standard/daily shows",
   "IndexerSettingsWebsiteUrl": "Website URL",
   "IndexerStatusAllUnavailableHealthCheckMessage": "All indexers are unavailable due to failures",
   "IndexerStatusUnavailableHealthCheckMessage": "Indexers unavailable due to failures: {indexerNames}",
