Change language for config option.

--- a/src/NzbDrone.Core/Localization/Core/en.json
+++ b/src/NzbDrone.Core/Localization/Core/en.json
@@ -554,8 +554,7 @@
   "DownloadClientTriblerSettingsApiKeyHelpText": "[api].key from triblerd.conf",
   "DownloadClientTriblerSettingsDirectoryHelpText": "Optional location to put downloads in, leave blank to use the default Tribler location",
   "DownloadClientTriblerSettingsSafeSeeding": "Safe Seeding",
-  "DownloadClientTriblerSettingsSafeSeedingHelpText": "Only Seed through proxies.",
-  "DownloadClientUTorrentProviderMessage": "uTorrent has a history of including cryptominers, malware and ads, we strongly encourage you to choose a different client.",
+  "DownloadClientTriblerSettingsSafeSeedingHelpText": "When enabled, only seed through proxies.",
   "DownloadClientUTorrentTorrentStateError": "uTorrent is reporting an error",
   "DownloadClientUnavailable": "Download Client Unavailable",
   "DownloadClientValidationApiKeyIncorrect": "API Key Incorrect",
