New: Include series poster for Apprise

--- a/src/NzbDrone.Core/Localization/Core/en.json
+++ b/src/NzbDrone.Core/Localization/Core/en.json
@@ -653,7 +653,6 @@
   "EpisodeHistoryLoadError": "Unable to load episode history",
   "EpisodeImported": "Episode Imported",
   "EpisodeImportedTooltip": "Episode downloaded successfully and picked up from download client",
-  "EpisodesInSeason": "{episodeCount} episodes in season",
   "EpisodeInfo": "Episode Info",
   "EpisodeIsDownloading": "Episode is downloading",
   "EpisodeIsNotMonitored": "Episode is not monitored",
@@ -669,6 +668,7 @@
   "EpisodeTitleRequired": "Episode Title Required",
   "EpisodeTitleRequiredHelpText": "Prevent importing for up to 48 hours if the episode title is in the naming format and the episode title is TBA",
   "Episodes": "Episodes",
+  "EpisodesInSeason": "{episodeCount} episodes in season",
   "EpisodesLoadError": "Unable to load episodes",
   "Error": "Error",
   "ErrorLoadingContent": "There was an error loading this content",
@@ -1329,6 +1329,8 @@
   "NotificationTriggersHelpText": "Select which events should trigger this notification",
   "NotificationsAppriseSettingsConfigurationKey": "Apprise Configuration Key",
   "NotificationsAppriseSettingsConfigurationKeyHelpText": "Configuration Key for the Persistent Storage Solution. Leave empty if Stateless URLs is used.",
+  "NotificationsAppriseSettingsIncludePoster": "Include Poster",
+  "NotificationsAppriseSettingsIncludePosterHelpText": "Include poster in message",
   "NotificationsAppriseSettingsNotificationType": "Apprise Notification Type",
   "NotificationsAppriseSettingsPasswordHelpText": "HTTP Basic Auth Password",
   "NotificationsAppriseSettingsServerUrl": "Apprise Server URL",
