Clarify wording of "DeleteRootFolder" and "DeleteRootFolderMessageText" to better reflect action
Improves the tooltip text to specify that the filesystem is unaffected when removing the root folder from Sonarr.

--- a/src/NzbDrone.Core/Localization/Core/en.json
+++ b/src/NzbDrone.Core/Localization/Core/en.json
@@ -370,8 +370,8 @@
   "DeleteReleaseProfileMessageText": "Are you sure you want to delete the release profile '{name}'?",
   "DeleteRemotePathMapping": "Delete Remote Path Mapping",
   "DeleteRemotePathMappingMessageText": "Are you sure you want to delete this remote path mapping?",
-  "DeleteRootFolder": "Delete Root Folder",
-  "DeleteRootFolderMessageText": "Are you sure you want to delete the root folder '{path}'?",
+  "DeleteRootFolder": "Remove Root Folder from Sonarr (filesystem unaffected)",
+  "DeleteRootFolderMessageText": "Are you sure you want to remove the root folder from Sonarr (no filesystem changes) '{path}'?",
   "DeleteSelected": "Delete Selected",
   "DeleteSelectedCustomFormats": "Delete Custom Format(s)",
   "DeleteSelectedCustomFormatsMessageText": "Are you sure you want to delete {count} selected custom format(s)?",
