New: Update wording when removing a root folder
Closes #7868

--- a/src/NzbDrone.Core/Localization/Core/en.json
+++ b/src/NzbDrone.Core/Localization/Core/en.json
@@ -370,8 +370,6 @@
   "DeleteReleaseProfileMessageText": "Are you sure you want to delete the release profile '{name}'?",
   "DeleteRemotePathMapping": "Delete Remote Path Mapping",
   "DeleteRemotePathMappingMessageText": "Are you sure you want to delete this remote path mapping?",
-  "DeleteRootFolder": "Delete Root Folder",
-  "DeleteRootFolderMessageText": "Are you sure you want to delete the root folder '{path}'?",
   "DeleteSelected": "Delete Selected",
   "DeleteSelectedCustomFormats": "Delete Custom Format(s)",
   "DeleteSelectedCustomFormatsMessageText": "Are you sure you want to delete {count} selected custom format(s)?",
@@ -1735,7 +1733,8 @@
   "RemoveQueueItemRemovalMethod": "Removal Method",
   "RemoveQueueItemRemovalMethodHelpTextWarning": "'Remove from Download Client' will remove the download and the file(s) from the download client.",
   "RemoveQueueItemsRemovalMethodHelpTextWarning": "'Remove from Download Client' will remove the downloads and the files from the download client.",
-  "RemoveRootFolder": "Remove root folder",
+  "RemoveRootFolder": "Remove Root Folder",
+  "RemoveRootFolderMessageText": "Are you sure you want to remove the root folder '{path}'? Files and folders will not be deleted from disk, and series in this root folder will not be removed from {appName}.",
   "RemoveSelected": "Remove Selected",
   "RemoveSelectedBlocklistMessageText": "Are you sure you want to remove the selected items from the blocklist?",
   "RemoveSelectedItem": "Remove Selected Item",
