reword info alert

--- a/src/NzbDrone.Core/Localization/Core/en.json
+++ b/src/NzbDrone.Core/Localization/Core/en.json
@@ -1226,7 +1226,7 @@
   "MonitorAllSeasons": "All Seasons",
   "MonitorAllSeasonsDescription": "Monitor all new seasons automatically",
   "MonitorEpisodes": "Monitor Episodes",
-  "MonitorEpisodesModalInfo": "This setting will only adjust which episodes or seasons are monitored within a series. It will not effect series itself unless None is chosen",
+  "MonitorEpisodesModalInfo": "This setting will only adjust which episodes or seasons are monitored within a series. Selecting None will unmonitor the series",
   "MonitorExistingEpisodes": "Existing Episodes",
   "MonitorExistingEpisodesDescription": "Monitor episodes that have files or have not aired yet",
   "MonitorFirstSeason": "First Season",
