allow user to define additional rejected extension types

--- a/src/NzbDrone.Core/Localization/Core/en.json
+++ b/src/NzbDrone.Core/Localization/Core/en.json
@@ -2138,6 +2138,9 @@
   "UsenetDelayTime": "Usenet Delay: {usenetDelay}",
   "UsenetDisabled": "Usenet Disabled",
   "UserInvokedSearch": "User Invoked Search",
+  "UserRejectedExtensions": "Additional Rejected File Extensions",
+  "UserRejectedExtensionsHelpText": "Comma separated list of files extensions to fail (Fail Downloads also needs to be enabled per indexer)",
+  "UserRejectedExtensionsTextsExamples": "Examples: '.001, .dog' or '001,dog'",
   "Username": "Username",
   "UtcAirDate": "UTC Air Date",
   "Version": "Version",
