New: Rename Series Monitoring to Episode Monitoring

--- a/src/NzbDrone.Core/Localization/Core/en.json
+++ b/src/NzbDrone.Core/Localization/Core/en.json
@@ -656,6 +656,7 @@
   "EpisodeIsNotMonitored": "Episode is not monitored",
   "EpisodeMissingAbsoluteNumber": "Episode does not have an absolute episode number",
   "EpisodeMissingFromDisk": "Episode missing from disk",
+  "EpisodeMonitoring": "Episode Monitoring",
   "EpisodeNaming": "Episode Naming",
   "EpisodeNumbers": "Episode Number(s)",
   "EpisodeProgress": "Episode Progress",
@@ -1222,6 +1223,8 @@
   "MonitorAllEpisodesDescription": "Monitor all episodes except specials",
   "MonitorAllSeasons": "All Seasons",
   "MonitorAllSeasonsDescription": "Monitor all new seasons automatically",
+  "MonitorEpisodes": "Monitor Episodes",
+  "MonitorEpisodesModalInfo": "This setting will only adjust which episodes or seasons are monitored within a series. Selecting None will unmonitor the series",
   "MonitorExistingEpisodes": "Existing Episodes",
   "MonitorExistingEpisodesDescription": "Monitor episodes that have files or have not aired yet",
   "MonitorFirstSeason": "First Season",
