Resolve PR review comments
- Renamed "Propagate tags" et al to "Add Series Tags"
- Inlined PropagateTags transient variable
- Sorted JSON

--- a/src/NzbDrone.Core/Localization/Core/en.json
+++ b/src/NzbDrone.Core/Localization/Core/en.json
@@ -485,9 +485,9 @@
   "DownloadClientQbittorrentSettingsContentLayoutHelpText": "Whether to use qBittorrent's configured content layout, the original layout from the torrent or always create a subfolder (qBittorrent 4.3.2+)",
   "DownloadClientQbittorrentSettingsFirstAndLastFirst": "First and Last First",
   "DownloadClientQbittorrentSettingsFirstAndLastFirstHelpText": "Download first and last pieces first (qBittorrent 4.1.0+)",
-  "DownloadClientQbittorrentSettingsPropagateTags": "Propagate Tags",
-  "DownloadClientQbittorrentSettingsPropagateTagsHelpText": "Add Season Tags to new torrents when added to the download client (qBittorrent 4.1.0+)",
   "DownloadClientQbittorrentSettingsInitialStateHelpText": "Initial state for torrents added to qBittorrent. Note that Forced Torrents do not abide by seed restrictions",
+  "DownloadClientQbittorrentSettingsAddSeriesTags": "Add Series Tags",
+  "DownloadClientQbittorrentSettingsAddSeriesTagsHelpText": "Add Series tags to new torrents added to the download client (qBittorrent 4.1.0+)",
   "DownloadClientQbittorrentSettingsSequentialOrder": "Sequential Order",
   "DownloadClientQbittorrentSettingsSequentialOrderHelpText": "Download in sequential order (qBittorrent 4.1.0+)",
   "DownloadClientQbittorrentSettingsUseSslHelpText": "Use a secure connection. See Options -> Web UI -> 'Use HTTPS instead of HTTP' in qBittorrent.",
